# iz-models

./: .gitignore  CMakeLists.txt  IzModelsConfig.cmake  README.md
include/IzModels/: AbstractItemModel.h  IzModels_Global.h  NullModel.h  ProxyModel.h  StringListModel.h  VariantListModel.h
private/: AbstractItemModel.cpp  NullModel.cpp  ProxyModel.cpp  StringListModel.cpp  VariantListModel.cpp
